[package]
name = "rocket"
version = "0.1.0"
authors = ["Allison Sierra <allie@allisonsierra.dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22.0", features = ["serialize"] }
# v0.5.0-rc.1
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63" }
serde = "1.0.136"
